--- a/kmaps-app/src/views/Texts/TextsViewer.sass
+++ b/kmaps-app/src/views/Texts/TextsViewer.sass
@@ -237,6 +237,7 @@
   #shanti-texts-container
     margin: 0 auto
     font-size: 1.4rem
+    background-color: #f9f9f9
 
   .astviewer.texts
     &.no-sidebars article.main-col
@@ -358,9 +359,10 @@
     z-index: 10
 
   .meta-toggle
-    margin: 0 0 0 35.5rem
     width: 1.5rem
     border: none
+    position: absolute
+    right: 20px
 
     //background-color: #8c49a0
     //color: white
@@ -399,7 +401,8 @@
     // width: 60%
     max-width: 100vw !important
     // max-width: 98.75% !important
-    height: calc(100vh - 12rem)
+    // height: calc(100vh - 12rem)
+    height: fit-content
     background-color: white
     box-shadow: inset 0 -0.2rem 5px #ddd
     overflow-y: scroll
@@ -416,10 +419,16 @@
     padding: 0
     min-width: 40rem
     max-width: 100%
-    height: calc(100vh - 24rem)
-    background-color: #eee
+    height: fit-content
+    background-color: #f9f9f9
     color: #333
     margin-top: -0.5rem
+
+    .col
+      position: fixed
+      max-width: 420px
+      background-color: transparent
+
 
   #sidecolumn-ctrl
     display: none /** doesn't work **/
