Updating text viewer display to keep toc fixed and highlight current sections

--- a/kmaps-app/src/views/Texts/TextsViewer.sass
+++ b/kmaps-app/src/views/Texts/TextsViewer.sass
@@ -7,7 +7,7 @@
   background-color: #eee
   height: 100vh
   -webkit-tap-highlight-color: transparent
-  max-width: 140rem
+  // max-width: 140rem
   margin: 0 auto
 
   &.astviewer
@@ -426,7 +426,7 @@
 
     .col
       position: fixed
-      max-width: 420px
+      max-width: 380px
       background-color: transparent
 
 
@@ -596,9 +596,10 @@
       margin-bottom: 1em
 
     ul li.active
-      background: -moz-linear-gradient(top, #f7f7f7 0, #f7f7f7 25px, #ffffff 25px, #ffffff 100%)
-      background: -webkit-linear-gradient(top, #f7f7f7 0, #f7f7f7 25px, #ffffff 25px, #ffffff 100%)
-      background: linear-gradient(to bottom, #f7f7f7 0, #f7f7f7 25px, #ffffff 25px, #ffffff 100%)
+      background: transparent
+      // background: -moz-linear-gradient(top, #f7f7f7 0, #f7f7f7 25px, #ffffff 25px, #ffffff 100%)
+      // background: -webkit-linear-gradient(top, #f7f7f7 0, #f7f7f7 25px, #ffffff 25px, #ffffff 100%)
+      // background: linear-gradient(to bottom, #f7f7f7 0, #f7f7f7 25px, #ffffff 25px, #ffffff 100%)
 
     a
       border: none
@@ -625,7 +626,8 @@
 
   .shanti-texts-toc
     li.active > a
-      color: #df3d26 !important
+      color: #0a2bad !important
+      font-weight: bold
 
     a::before
       content: ''
