--- a/kmaps-app/src/views/Texts/TextsViewer.sass
+++ b/kmaps-app/src/views/Texts/TextsViewer.sass
@@ -7,7 +7,7 @@
   background-color: #eee
   height: 100vh
   -webkit-tap-highlight-color: transparent
-  // max-width: 140rem
+  max-width: 140rem
   margin: 0 auto
 
   &.astviewer
@@ -237,7 +237,6 @@
   #shanti-texts-container
     margin: 0 auto
     font-size: 1.4rem
-    background-color: #f9f9f9
 
   .astviewer.texts
     &.no-sidebars article.main-col
@@ -359,10 +358,9 @@
     z-index: 10
 
   .meta-toggle
+    margin: 0 0 0 35.5rem
     width: 1.5rem
     border: none
-    position: absolute
-    right: 20px
 
     //background-color: #8c49a0
     //color: white
@@ -401,8 +399,7 @@
     // width: 60%
     max-width: 100vw !important
     // max-width: 98.75% !important
-    // height: calc(100vh - 12rem)
-    height: fit-content
+    height: calc(100vh - 12rem)
     background-color: white
     box-shadow: inset 0 -0.2rem 5px #ddd
     overflow-y: scroll
@@ -419,16 +416,10 @@
     padding: 0
     min-width: 40rem
     max-width: 100%
-    height: fit-content
-    background-color: #f9f9f9
+    height: calc(100vh - 24rem)
+    background-color: #eee
     color: #333
     margin-top: -0.5rem
-
-    .col
-      position: fixed
-      max-width: 380px
-      background-color: transparent
-
 
   #sidecolumn-ctrl
     display: none /** doesn't work **/
@@ -596,10 +587,9 @@
       margin-bottom: 1em
 
     ul li.active
-      background: transparent
-      // background: -moz-linear-gradient(top, #f7f7f7 0, #f7f7f7 25px, #ffffff 25px, #ffffff 100%)
-      // background: -webkit-linear-gradient(top, #f7f7f7 0, #f7f7f7 25px, #ffffff 25px, #ffffff 100%)
-      // background: linear-gradient(to bottom, #f7f7f7 0, #f7f7f7 25px, #ffffff 25px, #ffffff 100%)
+      background: -moz-linear-gradient(top, #f7f7f7 0, #f7f7f7 25px, #ffffff 25px, #ffffff 100%)
+      background: -webkit-linear-gradient(top, #f7f7f7 0, #f7f7f7 25px, #ffffff 25px, #ffffff 100%)
+      background: linear-gradient(to bottom, #f7f7f7 0, #f7f7f7 25px, #ffffff 25px, #ffffff 100%)
 
     a
       border: none
@@ -626,8 +616,7 @@
 
   .shanti-texts-toc
     li.active > a
-      color: #0a2bad !important
-      font-weight: bold
+      color: #df3d26 !important
 
     a::before
       content: ''
