--- a/kmaps-app/src/views/Texts/TextsViewer.css
+++ b/kmaps-app/src/views/Texts/TextsViewer.css
@@ -6,7 +6,6 @@
     background-color: #eee;
     height: 100vh;
     -webkit-tap-highlight-color: transparent;
-    max-width: 140rem;
     margin: 0 auto;
     /* Iframe Styles for pub reader and voyant */
     /* Embeds in Texts: images, av, texts, etc */
@@ -251,6 +250,7 @@
 .l-site__wrap.texts #shanti-texts-container {
     margin: 0 auto;
     font-size: 1.4rem;
+    background-color: #f9f9f9;
 }
 .l-site__wrap.texts .astviewer.texts.no-sidebars article.main-col {
     padding: 0;
@@ -388,9 +388,10 @@
     z-index: 10;
 }
 .l-site__wrap.texts .meta-toggle {
-    margin: 0 0 0 35.5rem;
     width: 1.5rem;
     border: none;
+    position: absolute;
+    right: 20px;
 }
 .l-site__wrap.texts .closed .meta-toggle-col {
     margin-left: -0.25rem;
@@ -415,7 +416,7 @@
     margin: 0 0 2rem;
     min-width: 40rem;
     max-width: 100vw !important;
-    height: calc(100vh - 12rem);
+    height: fit-content;
     background-color: white;
     box-shadow: inset 0 -0.2rem 5px #ddd;
     overflow-y: scroll;
@@ -432,10 +433,15 @@
     padding: 0;
     min-width: 40rem;
     max-width: 100%;
-    height: calc(100vh - 24rem);
-    background-color: #eee;
+    height: fit-content;
+    background-color: #f9f9f9;
     color: #333;
     margin-top: -0.5rem;
+}
+.l-site__wrap.texts #shanti-texts-sidebar .col {
+    position: fixed;
+    max-width: 380px;
+    background-color: transparent;
 }
 .l-site__wrap.texts #sidecolumn-ctrl {
     display: none;
@@ -611,27 +617,7 @@
     margin-bottom: 1em;
 }
 .l-site__wrap.texts .shanti-texts-toc ul li.active {
-    background: -moz-linear-gradient(
-        top,
-        #f7f7f7 0,
-        #f7f7f7 25px,
-        #ffffff 25px,
-        #ffffff 100%
-    );
-    background: -webkit-linear-gradient(
-        top,
-        #f7f7f7 0,
-        #f7f7f7 25px,
-        #ffffff 25px,
-        #ffffff 100%
-    );
-    background: linear-gradient(
-        to bottom,
-        #f7f7f7 0,
-        #f7f7f7 25px,
-        #ffffff 25px,
-        #ffffff 100%
-    );
+    background: transparent;
 }
 .l-site__wrap.texts .shanti-texts-toc a {
     border: none;
@@ -656,7 +642,8 @@
     padding-right: 4.5rem;
 }
 .l-site__wrap.texts .shanti-texts-toc li.active > a {
-    color: #df3d26 !important;
+    color: #0a2bad !important;
+    font-weight: bold;
 }
 .l-site__wrap.texts .shanti-texts-toc a::before {
     content: '';
