getting text toc to fix at top of page after header scroll

--- a/kmaps-app/src/views/Texts/TextsViewer.css
+++ b/kmaps-app/src/views/Texts/TextsViewer.css
@@ -439,9 +439,12 @@
     margin-top: -0.5rem;
 }
 .l-site__wrap.texts #shanti-texts-sidebar .col {
-    position: fixed;
     max-width: 380px;
     background-color: transparent;
+}
+.l-site__wrap.texts #shanti-texts-sidebar.fixed .col {
+    position: fixed;
+    margin-top: -90px;
 }
 .l-site__wrap.texts #sidecolumn-ctrl {
     display: none;
