--- a/kmaps-app/src/views/Texts/TextsViewer.sass
+++ b/kmaps-app/src/views/Texts/TextsViewer.sass
@@ -425,9 +425,12 @@
     margin-top: -0.5rem
 
     .col
-      position: fixed
       max-width: 380px
       background-color: transparent
+
+    &.fixed .col
+      position: fixed
+      margin-top: -90px
 
 
   #sidecolumn-ctrl
