--- a/kmaps-app/src/views/AdvancedSearch/AdvancedSearch.css
+++ b/kmaps-app/src/views/AdvancedSearch/AdvancedSearch.css
@@ -14,7 +14,7 @@
 }
 .advanced-search-wrap .query-rows-wrapper .advsrch-form-row {
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
     margin-bottom: 1.2rem;
 }
 .advanced-search-wrap .query-rows-wrapper .advsrch-form-row input,
@@ -29,17 +29,32 @@
     transition: width 0.35s, line-height 0.35s;
     min-height: 3.2rem;
 }
+.advanced-search-wrap .query-rows-wrapper .advsrch-form-row > div:first-child {
+    min-width: 115px;
+}
 .advanced-search-wrap .add-btns {
     display: flex;
     justify-content: space-evenly;
     margin-top: 3.6rem;
     margin-bottom: 3.6rem;
 }
+.advanced-search-wrap .add-btns button {
+    border-radius: 2rem !important;
+}
 .advanced-search-wrap .action-btns {
     display: flex;
     justify-content: center;
     padding-bottom: 1.6rem;
     align-items: center;
+}
+.advanced-search-wrap .row-delete {
+    font-size: 150%;
+    color: #de4f4faa;
+    margin-left: 1rem;
+    cursor: pointer;
+}
+.advanced-search-wrap .row-delete :hover {
+    color: red;
 }
 
 /*# sourceMappingURL=AdvancedSearch.css.map */
