--- a/kmaps-app/src/views/AdvancedSearch/AdvancedSearch.css
+++ b/kmaps-app/src/views/AdvancedSearch/AdvancedSearch.css
@@ -33,10 +33,8 @@
     min-width: 115px;
 }
 .advanced-search-wrap .add-btns {
-    display: flex;
-    justify-content: space-evenly;
-    margin-top: 3.6rem;
-    margin-bottom: 3.6rem;
+    margin-top: -4.75rem;
+    margin-left: -7.25rem;
 }
 .advanced-search-wrap .add-btns button {
     border-radius: 2rem !important;
