--- a/kmaps-app/src/views/AdvancedSearch/AdvancedSearch.scss
+++ b/kmaps-app/src/views/AdvancedSearch/AdvancedSearch.scss
@@ -34,11 +34,8 @@
         }
     }
     .add-btns {
-        display: flex;
-        justify-content: space-evenly;
-        margin-top: 3.6rem;
-        margin-bottom: 3.6rem;
-
+        margin-top: -4.75rem;
+        margin-left: -7.25rem;
         button {
             border-radius: 2rem !important;
         }
