fixing the links for showing the query and results

--- a/kmaps-app/src/views/AdvancedSearch/AdvancedSearch.css
+++ b/kmaps-app/src/views/AdvancedSearch/AdvancedSearch.css
@@ -55,4 +55,9 @@
     color: red;
 }
 
+textarea.form-control.query-code {
+    font-family: monospace;
+    background-color: #fdfeff;
+}
+
 /*# sourceMappingURL=AdvancedSearch.css.map */
