--- a/kmaps-app/src/views/AdvancedSearch/AdvancedSearch.scss
+++ b/kmaps-app/src/views/AdvancedSearch/AdvancedSearch.scss
@@ -42,4 +42,9 @@
         padding-bottom: 1.6rem;
         align-items: center;
     }
+    .field-select {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
