debugging searchs on exact and tibetans strings

--- a/kmaps-app/src/views/AdvancedSearch/AdvancedSearch.css
+++ b/kmaps-app/src/views/AdvancedSearch/AdvancedSearch.css
@@ -54,6 +54,11 @@
 .advanced-search-wrap .row-delete :hover {
     color: red;
 }
+.advanced-search-wrap .field-select {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 textarea.form-control.query-code {
     font-family: monospace;
