--- a/kmaps-app/src/views/KmapTree/KmapTree.scss
+++ b/kmaps-app/src/views/KmapTree/KmapTree.scss
@@ -169,9 +169,16 @@ ul.fancytree-container {
     }
 }
 
+#l-content__main .leafend .toggle-icon::before {
+    top: 0.9rem;
+}
+
+/*
 .l-place-content-tree .leafend .toggle-icon::before {
     top: 0.85rem;
 }
+
+ */
 
 .leafend:hover .toggle-icon::before {
     background-color: #b99b45;
