--- a/kmaps-app/src/views/KmapTree/KmapTree.scss
+++ b/kmaps-app/src/views/KmapTree/KmapTree.scss
@@ -173,6 +173,10 @@ ul.fancytree-container {
     top: 0.9rem;
 }
 
+.c-kmaptree.terms.tib-alpha .leafend {
+    margin-top: -0.5rem;
+}
+
 /*
 .l-place-content-tree .leafend .toggle-icon::before {
     top: 0.85rem;
